fix for hero section text alignment on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ a:hover {
 }
 
 .main-title {
-    margin: -4.1rem 0;
+    margin: 0 0 -4.1rem 0;
     padding: 0;
     font-size: 4.5rem;
 }
@@ -127,8 +127,7 @@ a:hover {
         grid-row: 1/2;
         z-index: 10;
         margin: auto;
-        text-align: center;
-        
+        text-align: center;   
     }
 
     .sub-title {
